# cosmos-sdk-migration-mcp

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: check_version.py
src/cosmos_migration_mcp/: __init__.py  agents.md  server.py  specs.py
src/cosmos_migration_mcp/migration_spec/v50-to-v54/: ante.yaml  app-structure.yaml  bank-endblock.yaml  block-gas-meter.yaml  circuit.yaml  core.yaml  crisis.yaml  epochs-app-module.yaml  epochs.yaml  gov-hooks.yaml  gov.yaml  group.yaml  nft.yaml  otel-migration.yaml  sr25519-removal.yaml  store-v2.yaml  validator-power-rename.yaml
tests/: test_improvements.py  test_warning_specs.py
